--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
     "svelte": "^4.2.12",
     "vite": "^5.1.4"
+  },
+  "dependencies": {
+    "svelte-spa-router": "^4.0.1"
   }
 }
