--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
 		"prettier-plugin-svelte": "^3.3.3",
 		"svelte": "^5.0.0",
 		"vite": "^6.2.5"
+	},
+	"dependencies": {
+		"@sveltejs/adapter-static": "^3.0.8"
 	}
 }
