--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"type": "module",
 	"scripts": {
 		"dev": "vite dev",
-		"build": "vite build",
+		"build": "npm run generate-rss && vite build",
 		"preview": "vite preview",
 		"generate-rss": "node dist/generate-rss.js",
 		"prepare": "svelte-kit sync || echo ''",
